# PassMan

./: CMakeLists.txt
config/: config.h
include/database/: database.h
include/encryption/: encryption.h
include/interface/: tui.h
src/: main.cpp
src/database/: database.cpp
src/encryption/: encryption.cpp
src/interface/: tui.cpp
tests/: test_database.cpp  test_encryption.cpp
